--- a/ANAS portfolio/anas.html
+++ b/ANAS portfolio/anas.html
@@ -250,6 +250,14 @@
       <p>Issued by CISCO Academy</p>
     </div>
 
+                <!-- Certificate Card 6 -->
+    <div class="certificate-card">
+      <img src="JavaScriptEssentials1Update20251127-31-pud3if-1.png" alt="Certificate 5">
+      <h3>Java Script</h3>
+      <p>Issued by Cisco Academy</p>
+    </div>
+
+
     <!-- Certificate Card 3 -->
     <div class="certificate-card">
       <img src="imagescertificate3.png" alt="Certificate 3">
@@ -293,4 +301,5 @@
   </footer>
 </body>
 </html>
+
 
