Fix HTML formatting and structure

--- a/ANAS portfolio/anas.html
+++ b/ANAS portfolio/anas.html
@@ -254,7 +254,7 @@
     <div class="certificate-card">
       <img src="JavaScriptEssentials1Update20251127-31-pud3if-1.png" alt="Certificate 5">
       <h3>Java Script</h3>
-      <p>Issued by Cisco Academy</p>
+      <p>Issued by CISCO Academy</p>
     </div>
 
 
@@ -301,5 +301,6 @@
   </footer>
 </body>
 </html>
+
 
 
