--- a/ANAS portfolio/anas.html
+++ b/ANAS portfolio/anas.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    
 <head>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="imagesfavicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anas Mohamed | Portfolio</title>
+
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(120deg, #0f0f0f, #1b1b1b);
+      background: linear-gradient(120deg, #b92f2f, #d4cdcd);
       color: #f0f0f0;
       overflow-x: hidden;
+    }
+
+    /* ===== Matrix Background ===== */
+    #matrix-bg {
+      position: fixed;
+      inset: 0;
+      z-index: -2;
+      background: #317010;
+      overflow: hidden;
+    }
+
+    #matrix-canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
     }
 
     header {
@@ -24,7 +45,6 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      background: linear-gradient(135deg, #0d0d0d, #222);
       animation: fadeIn 2s ease;
     }
 
@@ -58,6 +78,7 @@
       display: inline-block;
       animation: bounceIn 1.5s ease;
     }
+
     h2::after {
       content: '';
       position: absolute;
@@ -94,114 +115,70 @@
       transition: 0.4s;
     }
 
+    .certificates-section {
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .certificates-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 25px;
+    }
+
+    .certificate-card {
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 20px;
+      padding: 20px;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+
+    .certificate-card img {
+      width: 100%;
+      border-radius: 15px;
+    }
+
+    .certificate-card:hover {
+      transform: translateY(-10px) scale(1.05);
+      box-shadow: 0 0 20px rgba(0,255,150,0.5);
+    }
+
     footer {
       text-align: center;
       padding: 40px;
       background: #0d0d0d;
-      animation: fadeInUp 2s ease;
     }
-
 
     .social-links a {
-  font-size: 28px;
-  color: #fff;
-  margin: 0 12px;
-  transition: transform 0.3s ease, color 0.3s ease;
-}
+      font-size: 28px;
+      color: #fff;
+      margin: 0 12px;
+      transition: transform 0.3s ease, color 0.3s ease;
+    }
 
-.social-links a:hover {
-  transform: scale(1.3);
-  color: #00ff88;
-}
-.certificates-section {
-  padding: 80px 20px;
-  text-align: center;
-  color: #fff;
-}
-
-.certificates-section .section-title {
-  font-size: 36px;
-  margin-bottom: 40px;
-  position: relative;
-  animation: fadeInDown 1s ease;
-}
-
-.certificates-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 25px;
-}
-
-.certificate-card {
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 20px;
-  padding: 20px;
-  text-align: center;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
-  animation: fadeInUp 1s ease;
-}
-
-.certificate-card img {
-  width: 100%;
-  border-radius: 15px;
-  margin-bottom: 15px;
-}
-
-.certificate-card h3 {
-  font-size: 22px;
-  margin: 10px 0;
-}
-
-.certificate-card p {
-  font-size: 14px;
-  color: #aaa;
-}
-
-.certificate-card:hover {
-  transform: translateY(-10px) scale(1.05);
-  box-shadow: 0 0 20px rgba(0,255,150,0.5);
-}
-
+    .social-links a:hover {
+      transform: scale(1.3);
+      color: #00ff88;
+    }
 
     /* Animations */
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
-    @keyframes slideInDown {
-      from {transform: translateY(-100px); opacity: 0;}
-      to {transform: translateY(0); opacity: 1;}
-    }
-    @keyframes slideInUp {
-      from {transform: translateY(100px); opacity: 0;}
-      to {transform: translateY(0); opacity: 1;}
-    }
-    @keyframes fadeUp {
-      from {opacity: 0; transform: translateY(50px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-    @keyframes bounceIn {
-      0% {transform: scale(0.3); opacity: 0;}
-      50% {transform: scale(1.05); opacity: 1;}
-      70% {transform: scale(0.9);}
-      100% {transform: scale(1);}
-    }
-    @keyframes expand {
-      from {width: 0;}
-      to {width: 100%;}
-    }
-    @keyframes zoomIn {
-      from {opacity: 0; transform: scale(0.7);}
-      to {opacity: 1; transform: scale(1);}
-    }
-    @keyframes pulse {
-      0%, 100% {transform: scale(1);}
-      50% {transform: scale(1.1);}
-    }
+    @keyframes fadeIn { from {opacity:0} to {opacity:1} }
+    @keyframes slideInDown { from {transform:translateY(-100px);opacity:0} to {transform:none;opacity:1} }
+    @keyframes slideInUp { from {transform:translateY(100px);opacity:0} to {transform:none;opacity:1} }
+    @keyframes fadeUp { from {opacity:0;transform:translateY(50px)} to {opacity:1;transform:none} }
+    @keyframes bounceIn { 0%{transform:scale(.3)} 100%{transform:scale(1)} }
+    @keyframes expand { from {width:0} to {width:100%} }
+    @keyframes zoomIn { from {opacity:0;transform:scale(.7)} to {opacity:1;transform:scale(1)} }
   </style>
-  <script src="https://kit.fontawesome.com/4b42e6c5d2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
+  <!-- Matrix Background -->
+  <div id="matrix-bg">
+    <canvas id="matrix-canvas"></canvas>
+  </div>
+
   <header>
     <h1>Anas Mohamed</h1>
     <p>Web Developer | Ethical Hacker | Game Development</p>
@@ -209,9 +186,7 @@
 
   <section>
     <h2>About Me</h2>
-    <p>
-      Hi, I'm Anas Mohamed. A Web developer. This is my personal space to showcase my work, projects, and ways to connect with me.
-    </p>
+    <p>Hi, I'm Anas Mohamed. A Web developer. This is my personal space to showcase my work.</p>
   </section>
 
   <section>
@@ -219,19 +194,20 @@
     <div class="projects">
       <div class="project-card">
         <h2>Ethical Hacker</h2>
-        <p>completed "Ethical Hacker Course" & "introduction of cyber security" from Cisco</p>
+        <p>Completed courses from Cisco</p>
       </div>
       <div class="project-card">
         <h2>Game Developer</h2>
-        <p>game developer with godot</p>
+        <p>Game development using Godot</p>
       </div>
       <div class="project-card">
         <h2>Web Developer</h2>
-        <p>have full knowledge about "HTML , CSS , JQuery , BootStrap , Java Script"</p>
+        <p>HTML, CSS, JavaScript, Bootstrap</p>
       </div>
     </div>
   </section>
-<!-- ===== Certificates Section ===== -->
+
+  <!-- ===== Certificates Section ===== -->
 <section id="certificates" class="certificates-section">
   <h2 class="section-title">My Certificates</h2>
   <div class="certificates-grid">
@@ -286,22 +262,46 @@
 
   <footer>
     <div class="social-links">
-  <a href="https://www.linkedin.com/in/anas-mahfouz" target="blank">
-    <i class="fab fa-linkedin"></i>
-  </a>
-  <a href="https://github.com/anas-mahfouz" target="blank">
-    <i class="fab fa-github"></i>
-  </a>
-  <a href="https://wa.me/201277430528" target="blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-</div>
-
-    <p>© 2025 Anas Mohamed. All rights reserved.</p>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <p>© 2025 Anas Mohamed</p>
   </footer>
+
+  <!-- Matrix JS -->
+  <script>
+    const canvas = document.getElementById("matrix-canvas");
+    const ctx = canvas.getContext("2d");
+
+    function resize() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+
+    resize();
+    window.addEventListener("resize", resize);
+
+    const letters = "01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%&*+-";
+    const fontSize = 16;
+    const columns = Math.floor(canvas.width / fontSize);
+    const drops = Array(columns).fill(0);
+
+    function draw() {
+      ctx.fillStyle = "rgba(2,13,18,0.12)";
+      ctx.fillRect(0,0,canvas.width,canvas.height);
+      ctx.fillStyle = "#00ff9c";
+      ctx.font = fontSize + "px monospace";
+
+      drops.forEach((y, i) => {
+        const text = letters[Math.floor(Math.random()*letters.length)];
+        ctx.fillText(text, i*fontSize, y*fontSize);
+        drops[i] = y*fontSize > canvas.height && Math.random() > 0.98 ? 0 : y+1;
+      });
+    }
+
+    setInterval(draw, 55);
+  </script>
+
 </body>
 </html>
-
-
-
-
